--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
+    "apollo-boost": "^0.4.9",
     "apollo-server-express": "^3.12.0",
-    "graphql": "^16.6.0",
+    "graphql": "^15.8.0",
     "mongoose": "^7.2.2"
   }
 }
