--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@apollo/react-hooks": "^4.0.0",
     "apollo-boost": "^0.4.9",
     "apollo-server-express": "^3.12.0",
+    "express": "^4.17.1",
     "graphql": "^15.8.0",
     "mongoose": "^7.2.2",
     "react": "^18.2.0",
