--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^4.0.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "graphql":"^15.8.0",
     "mongoose": "^7.0.2"
   },
   "devDependencies": {
